syntax = "proto3";

message RightSideList{
  repeated LatestComment comments = 1;
  repeated Tags tags = 2;
  repeated Photo photos = 3;
  repeated ArticleType type = 4;
}

message LatestComment{
  int64 commentId = 1;
  int64 articleId = 2;
  string content = 3;
  string date = 4;
}

message ArticleType{
  string name = 1;
  string value = 2;
  int32 count = 3;
}


message Tags{
  int32 id = 1;
  string name = 2;
}

message Photo{
  int32 id = 1;
  string src = 2;
  string alt = 3;
  string title = 4;
}